Use stringified JSON for bluetooth sdp attributes.

Recently, Mojo wire format change was introduced
for native structure.
https://chromium.googlesource.com/chromium/src/+/fd907634b5ea956b34bd1672c084089aad2150cd
It causes a protocol mismatch between ARC and Chrome.
Unfortunately, rolled libmojo is too old, so we cannot
use values.mojom now. As its workaround,
this CL stringifies the JSON value if necessary,
and use it for the communication.

Note that this is breaking change. Though, the protocol is already
broken, so we don't much care about it.

BUG=767313
TEST=Ran CTS.

Change-Id: Iaaf28065aa7cde0ce17d7231da0571312f23772d